# rusty-weather

./: Cargo.toml  README.md
languages/: de.json  en.json
src/: lib.rs  main.rs  weather.rs
src/utils/: config.rs  mod.rs  server.rs
ui-src/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
ui-src/languages/: de.json
ui-src/src/: app.rs  main.rs
ui-src/src/components/: current.rs  forecast.rs  mod.rs
