[package]
name = "rusty-weather"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
clap = { version = "4.5.34", features = ["derive"] }
dotenv = "0.15.0"
lingua-i18n-rs = "0.2.0"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }

[workspace]
members = ["ui-src"]
