[package]
name = "ui-src"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7.8", features = ["csr"] }
leptos_router = "0.7.8"
lingua-i18n-rs = { version = "0.3.0", features = ["web"] }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
